# sinethesizer

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: instruments_creation.md  timbre_generation.ipynb  timbres_creation.md  track_definition.md
docs/examples/: instruments.yml  mapping.yml  midi_config.yml  scale.json  scale.tsv
presets/: additive_bright_pipe.yml  additive_mellow_pipe.yml  bass_recorder.yml  bowed_string.yml  brass.yml  breathy_open_diapason.yml  breathy_quintaten.yml  breathy_violon.yml  demo.json  demo.yml  filtered_noise.yml  fm_bass.yml  fm_sine.yml  instruments.yml  irish_flute.yml  metallic_pad.yml  plucked_string.yml  pure_open_diapason.yml  pure_quintaten.yml  pure_violon.yml  risset_drum.yml  silence.yml  trompette.yml  woodwind.yml
requirements/: base.txt  constraints.txt  test.txt
sinethesizer/: __init__.py  __main__.py  default_config.json  default_config.yml
sinethesizer/effects/: __init__.py  amplitude.py  automation.py  chorus.py  equalizer.py  filter.py  filter_sweep.py  overdrive.py  registry.py  reverb.py  stereo.py  tremolo.py  vibrato.py  volume.py
sinethesizer/envelopes/: __init__.py  ahdsr.py  misc.py  registry.py  user_defined.py
sinethesizer/io/: __init__.py  events_to_wav.py  json_to_numpy.py  json_to_timbre_specs.py  load_presets.py  midi_to_events.py  midi_to_numpy.py  numpy_to_wav.py  piano_roll_to_tsv.py  tsv_to_events.py  tsv_to_numpy.py  utils.py
sinethesizer/oscillators/: __init__.py  analog.py  (+3 more)
tests/: __init__.py  conftest.py
(+72 files in other folders)
